Bug 135093 - Not assign wording error dialog on Add Submissions dialog by blank input.
Summary: Not assign wording error dialog on Add Submissions dialog by blank input.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.1 rc
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.1.0 target:7.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-24 10:07 UTC by sawakaze
Modified: 2020-07-30 10:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (123.38 KB, image/png)
2020-07-24 10:07 UTC, sawakaze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2020-07-24 10:07:21 UTC
Description:
After following step, popup error dialog.
but dialog is not assigned wording.


Steps to Reproduce:
1. File > New > XML Form Document
2. Press "Submissions" tab on right toolbar.
3. Press "Add Submission" button ( green "plus" icon)
-> popup Add Submission dialog
4. not input name and press OK
-> popup error window. but on error diagram is written "LibreOffice ***" (see screenshot)

Actual Results:
popup error diagram, but error diagram wording is "LibreOffice ***"

Expected Results:
assign good wording.
i.e. On the case of Bindings, wording is "The Name is not valid in XML. Please enter a different name." 
i think that it seem to assign wording.


Reproducible: Always


User Profile Reset: No



Additional Info:
i confirm this version

Version: 7.0.0.2
Build ID: c01aa64b6c3d89ebe5fe69c28c7adb24eb85249c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 1 sawakaze 2020-07-24 10:07:51 UTC
Created attachment 163474 [details]
screenshot
Comment 2 Julien Nabet 2020-07-24 10:21:27 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Julien Nabet 2020-07-24 11:36:03 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/99371
Comment 4 Commit Notification 2020-07-24 15:49:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1800e22f81959c6cb56f8ed238ac68681dda1a21

tdf#135093: fix wording error dialog on Add Submissions dialog by blank input

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2020-07-24 15:50:27 UTC
Patch for 7.0 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/99390
Comment 6 Commit Notification 2020-07-30 10:06:21 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/f213e0b8a575e1846a7677fe9feb63f514748ea7

tdf#135093: fix wording error dialog on Add Submissions dialog by blank input

It will be available in 7.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.