tdf#135093: fix wording error dialog on Add Submissions dialog by blank input

Don't replace the right string by application name

It seems to come from:
commit b5483af985ed8c49b0bb9ebcd096cc9530e35a38
Author: Thomas Arnhold <thomas@arnhold.org>
Date:   Fri Aug 15 21:28:56 2014 +0200

    ErrorBoxes from datanavi to String

Change-Id: Ifd5a49537d0574bc2fb6530e70d19c31a35da914